--- a/Week14/product dot/utDotProduct/utDotProduct.cbp
+++ b/Week14/product dot/utDotProduct/utDotProduct.cbp
@@ -2,34 +2,21 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="cpptest2" />
+		<Option title="utDotProduct" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
-				<Option output="Debug/cpptest2" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Debug/" />
-				<Option type="1" />
-				<Option compiler="gcc" />
-				<Compiler>
-					<Add option="-g" />
-					<Add directory="../cpptest2" />
-				</Compiler>
-				<Linker>
-					<Add library="cppunitlite\cppunitlite.a" />
-				</Linker>
-			</Target>
 			<Target title="Release">
-				<Option output="Release/cpptest2" prefix_auto="1" extension_auto="1" />
-				<Option object_output="Release/" />
+				<Option output="bin/utDotProduct" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="../cpptest2" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="..\cppunitlite\cppunitlite.a" />
 				</Linker>
 			</Target>
 		</Build>
@@ -37,11 +24,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Linker>
-			<Add library="cppunitlite\libCppUnitLite.a" />
-			<Add library="cppunitlite\cppunitlite.a" />
-		</Linker>
 		<Unit filename="main.cpp" />
+		<Unit filename="utVector.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
